--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <li><a href="#inf" onclick="resetNavPosition()">INFOS</a></li>
             <li><a href="artist.html" onclick="resetNavPosition()">LINE UP</a></li>
             <li><a href="#spon"onclick="resetNavPosition()">SPONSORS</a></li>
-            <li><a href="#cont"onclick="resetNavPosition()">CONTACT</a></li>
+            <li><a href="contact.html"onclick="resetNavPosition()">CONTACT</a></li>
             <li><a href="#rese" class="btn white" onclick="resetNavPosition()">RESERVEZ TICKETS</a></li>
           </ul>
         </div>
         <img src="photos\menu-btn.png" alt="menu hamburger"
         class="menu-hamburger" id="menuBtn">
     </nav>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">&#8593;</button>
   </header>
-  <button id="scrollToTopBtn" onclick="scrollToTop()">&#8593;</button>
       <!--Slide 1-->
       <div class="slide1" id="acc">
         <h1>30 juin - 2 et 3 juillet <br>
@@ -70,7 +70,7 @@
         <div class="left">
           <h1 style="color: #FCFF77;">Artistes</h1>
           <p style="color: #FEFFDD;">Des chanteurs pop aux chanteurs de musique rap en passant par les artistes de la chanson française, les festivaliers peuvent s'attendre à une grande diversité de styles de chant. Le festival met également en avant les paroles des chansons, souvent porteuses d'un message fort et engagé. Les chanteurs se produisent dans une ambiance intimiste et émotionnelle, avec des éclairages subtils pour souligner la beauté de leurs voix. En plus de la musique, le festival propose également des conférences et des ateliers pour approfondir la compréhension de l'art vocal et améliorer ses propres compétences de chant. Avec une programmation de qualité et une ambiance conviviale, le festival de musique pour chanteurs est un lieu de rencontre et de découverte pour tous les passionnés de musique vocale.</p>
-          <a href="artist.html" class="btn orange">Découvrir la Line Up
+          <a href="artist.html" class="btn orange">Line Up
             <img src="photos/Vector.png" alt="découvrir line up" /></a>
         </div>
         <div class="right">
@@ -121,7 +121,7 @@
                 <span class="text2 bleu">59,99 €</span>
               </div>
               <div class="choixdispo">
-                <span class="text3">1 sièges disponibles</span>
+                <span class="text3">1 siège disponible</span>
                 <span class="text4a">Accès au wifi</span>
                 <span class="text5">Nourriture gratuite &amp; café</span>
               </div>
@@ -164,49 +164,10 @@
           <img src="photos\logo\maredsous.png" alt="logo5">
           <img src="photos\logo\voo.png" alt="logo6">
           <img src="photos\logo\spa.png" alt="logo7">
-          <img src="photos\logo\delhaize.png" alt="logo8">
+          <img src="photos\delhaize.png" alt="logo8">
         </div>
       </div>
       <!--Slide 5-->
-      <!--Slide 6-->
-      <div class="slide6" id="cont">
-        <div class="left6">
-            <h1>Contactez-Nous</h1>
-            <h2>Vous avez une demande particulière ? <br>
-              Nous serons heureux de vous aider !</h2>
-            <img src="photos/Shape.png" alt="Image de coin inférieur droit" class="shape-img" />
-          
-          <div class="text6">
-            <img src="photos/phone.png" alt="Icône téléphone" />
-            <p>+02 225 225</p>
-          </div>
-          <div class="text6">
-            <img src="photos/mail.png" alt="Icône mail" />
-            <p>info@tropicalheatwave.be</p>
-          </div>
-          <div class="text6">
-            <img src="photos/lieu.png" alt="Icône lieu" />
-            <p>Av. de Jupille, 4020 Liège</p>
-          </div>
-        </div>
-        <div class="right6">
-            <h3>Remplissez vos coordonnées</h3>
-            <div class="input-container">
-              <label for="nom">Nom :</label>
-              <input type="text" id="nom" name="nom" />
-            </div>
-            <div class="input-container">
-              <label for="mail">Mail :</label>
-              <input type="email" id="mail" name="mail" />
-            </div>
-            <div class="input-container">
-              <label for="message">Votre Message :</label>
-              <textarea id="message" name="message"></textarea>
-            </div>
-            <button class="submit-button" type="submit">Envoyer</button>
-        </div>
-      </div>
-      <!--Slide 6-->
       <footer>
         <div class="footer-container">
           <div class="footer-social">
