--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Découvrez le festival Tropical Heatwave, Réservez vos tickets dès maintenant!">
+  <meta name="keywords" content="Tropical Heatwave, festival, musique, exotique, rythmes tropicaux, artistes, ambiance chaleureuse, réservez tickets">
+  <meta name="author" content="EPSE">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Tropical Heatwave">
+  <meta property="og:description" content="Découvrez le festival Tropical Heatwave, Réservez vos tickets dès maintenant!">
+  <meta property="og:image" content="photos\Image 9.jpg">
+  <meta property="og:url" content="http://tropical-heatwave.buckloick.com/">
+  <meta property="og:type" content="website">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/x-icon" href="photos\logoSite.png">
   <title>Tropical Heatwave - Home</title>
 </head>
 <body>
