--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
   <title>Tropical Heatwave - Contact</title>
 </head>
 <body>
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
   <script src="menu.js"></script>
   <header>
     <style>
