--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <title>Tropical Heatwave - Home</title>
 </head>
 <body>
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
   <script src="menu.js"></script>
   <header>
     <nav class="navbar">
@@ -191,7 +194,5 @@
           </div>
         </div>
       </footer>
-      
-      
 </body>
 </html>
