--- a/artist.html
+++ b/artist.html
@@ -8,6 +8,9 @@
     <title>Tropical Heatwave - Artist</title>
 </head>
 <body>
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
     <script src="menu.js"></script>
     <header>
       <style>.navbar{
