--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="photos\Image 9.jpg">
   <meta property="og:url" content="http://tropical-heatwave.buckloick.com/">
   <meta property="og:type" content="website">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style/style.css">
   <link rel="icon" type="image/x-icon" href="photos\logoSite.png">
   <title>Tropical Heatwave - Home</title>
 </head>
